swim_client/src/configuration/tests/resources/invalid/missing-key.recon
@config {
    @client {
        buffer_size: 2
    }
}